--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,11 +1,25 @@
 .cat-images {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     overflow: hidden;
     display:inline-block;
     vertical-align:middle;
   }
-  .ccat-images img{
+  .cat-images img{
     width:100%;
   }
+
+  @media screen and (min-device-width: 200px) and (max-device-width: 650px) { 
+    .cat-images {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        overflow: hidden;
+        display:inline-block;
+        vertical-align:middle;
+      }
+      .cat-images img{
+        width:100%;
+      }
+    }
