--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.p-progress-spinner {
+    display:  block !important;
+    position: static !important;
+}
+
+.p-progress-spinner-svg {
+    width: 25% !important;
+}
