--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -6,8 +6,8 @@
     display:inline-block;
     vertical-align:middle;
   }
-  .cat-images img{
-    width:100%;
+  .circular img{
+    border: 3px solid #d3d3d3;
   }
 
   @media screen and (min-device-width: 200px) and (max-device-width: 650px) { 
